welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:18: error: ';' expected but integer literal found.
    print 1
          ^ZigZag:23: error: ';' expected but integer literal found.
    print 2
          ^ZigZag:28: error: ';' expected but integer literal found.
    print 3
          ^ZigZag:33: error: ';' expected but integer literal found.
    print 4
          ^